# MAPS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  maps-samples.sln
include/maps/: maps.cuh  maps.vcxproj  maps.vcxproj.filters
include/maps/algorithms/: histogram.cuh  reduction.cuh
include/maps/index_mappers/: graph_mapper.hpp
include/maps/input_containers/: adjacency.cuh  block.cuh  block1D.cuh  block2D.cuh  irregular.cuh  permutation.cuh  traversal.cuh  window.cuh  window1D.cuh  window2D.cuh
include/maps/input_containers/block/: block_iterator.inl
include/maps/input_containers/internal/: io_boundaries.cuh  io_common.cuh  io_global.cuh  io_globaltoarray.cuh  io_globaltoshared.cuh
include/maps/input_containers/window/: window2D_ilp.inl  window_iterator.inl
include/maps/internal/: common.cuh  common.h  cuda_utils.hpp  macro_helpers.h  texref.cuh  type_traits.hpp
include/maps/multi/: common.h  datum.h  graph_containers.h  input_containers.h  multi.cuh  output_containers.h  scheduler.h  task_constructor.h  task_graph.h
include/maps/optional/: constant_boundaries.cuh
include/maps/output_containers/: injective.cuh
samples/: MAPS.sln
samples/Convolution/: Convolution.cu  Convolution.vcxproj  Convolution.vcxproj.filters
samples/Histogram/: Histogram.cu  Histogram.vcxproj  Histogram.vcxproj.filters
samples/ImageConvolution/: ImageConvolution.cu  ImageConvolution.vcxproj  ImageConvolution.vcxproj.filters
samples/MatrixMultiplication/: MatrixMultiplication.cu  MatrixMultiplication.vcxproj  MatrixMultiplication.vcxproj.filters
samples/N-Body/: N-Body.cu  N-Body.vcxproj  N-Body.vcxproj.filters
samples/SpMV/: SpMV.cu  SpMV.vcxproj  SpMV.vcxproj.filters  cuda_common.cpp  cuda_common.h
samples/conv2/: conv2.cu  conv2.vcxproj  conv2.vcxproj.filters  plot.py
samples/game-of-life/: game-of-life.vcxproj  game-of-life.vcxproj.filters  golsample.cu  main.cpp
samples/histogram/: histogram.cu  histogram.vcxproj.filters  main.cpp
samples/sgemm/: main.cpp  sgemm.cu  sgemm.vcxproj  sgemm.vcxproj.filters
samples/spmv/: main.cpp  mmio.cpp  spmv.cu  spmv.vcxproj  spmv.vcxproj.filters  stopwatch.h
samples/spmv/data/: README.txt
test/unit-tests/: block_matmul_test.cu  block_perftest.cu  block_test.cu  constant_boundary_test.cu  cuda_gtest_utils.h  input_common_test.cu  invoke_multithreading_test.cu  main.cpp  scheduler_test.cu  segmentation_test.cu  system_test.cu  unit-tests.vcxproj  unit-tests.vcxproj.filters  window_perftest.cu  window_test.cu
travis/: install.sh  run.sh
